--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
-    "react-native-qrcode-scanner": "^1.2.1"
+    "react-native-elements": "^1.2.7",
+    "react-native-permissions": "^2.0.9",
+    "react-native-qrcode-scanner": "^1.2.1",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
